--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.1.6", features = ["derive"] }
 lru = "0.9.0"
 ndarray = "0.15.6"
 polars = { version = "0.27.2", features = ["parquet", "ndarray"] }
