--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,6 @@ lru = "0.9.0"
 ndarray = "0.15.6"
 polars = { version = "0.27.2", features = ["parquet", "ndarray"] }
 rayon = "1.6.1"
-serde = { version = "1.0.152", features = ["derive"] }
+serde = { version = "=1.0.171", features = ["derive"] }
 serde_json = "1.0.93"
 zip = { version = "0.6.4", features = ["flate2"] }
